syntax = "proto3";

package greeting;

option go_package = "github.com/madevara24/monorepo-gabut/try-grpc/proto/greeting";

// The greeting service definition
service GreetingService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends multiple greetings
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}